--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,126 @@
+name: CI/CD automation and deployment 
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  terraform:
+    name: automate terraform
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      S3_BUCKET: ${{ secrets.S3_BUCKET }}
+      EC2_USER: ${{ secrets.EC2_USER }}
+      EC2_HOST: ${{ secrets.EC2_HOST }}
+      EC2_KEY: ${{ secrets.EC2_KEY }}
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Format
+        run: terraform fmt -check
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        run: terraform plan 
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve 
+
+  tfsec:
+    name: tfsec scanning
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Run tfsec
+        uses: aquasecurity/tfsec-action@v1.0.0
+
+  trivy:
+    name: trivy Scan (Docker Image)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image
+        run: docker build -t vite-app:latest -f vite-app/Dockerfile vite-app
+
+      - name: Scan Docker image with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: vite-app:latest
+          format: table
+          exit-code: 0
+          ignore-unfixed: true
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [terraform, tfsec, trivy]
+
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies and build
+        working-directory: vite-app
+        run: |
+          npm install
+          npm run build
+
+      - name: Zip build output
+        run: |
+          cd vite-app/dist
+          zip -r ../../vite-app.zip .
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Upload zip to S3
+        run: |
+          aws s3 cp vite-app.zip s3://${{ secrets.S3_BUCKET }}/vite-app.zip
+
+      - name: Prepare SSH Key
+        run: |
+          echo "${{ secrets.EC2_KEY }}" | base64 -d > ec2-key.pem
+          chmod 600 ec2-key.pem
+
+      - name: Deploy to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ec2-key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          echo "Deploying application on EC2 instance"
+            sudo yum install -y unzip aws-cli
+            aws s3 cp s3://${{ secrets.S3_BUCKET }}/vite-app.zip /home/${{ secrets.EC2_USER }}/vite-app.zip
+            unzip -o /home/${{ secrets.EC2_USER }}/vite-app.zip -d /home/${{ secrets.EC2_USER }}/vite-app
+            sudo rm -rf /usr/share/nginx/html/*
+            sudo cp -r /home/${{ secrets.EC2_USER }}/vite-app/* /usr/share/nginx/html/
+            sudo systemctl restart nginx
+          EOF
