--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,24 +74,28 @@ jobs:
           ignore-unfixed: true
 
   sealed-secrets: 
-    name: Apply Sealed Secrets 
-    runs-on: ubuntu-latest 
-    steps: 
-      - name: Checkout 
-        uses: actions/checkout@v4 
- 
-      - name: Install kubeseal 
-        run: | 
-          wget https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-0.24.5-linux
-          amd64.tar.gz 
-          tar -xvf kubeseal-0.24.5-linux-amd64.tar.gz 
-          sudo install kubeseal /usr/local/bin/kubeseal 
- 
-      - name: Apply Sealed Secrets 
-        run: | 
-          kubectl apply -f k8s/sealed-secret.yaml 
-        env: 
-          KUBECONFIG: ${{ secrets.KUBECONFIG }}         
+  name: Apply Sealed Secrets 
+  runs-on: ubuntu-latest 
+  steps: 
+    - name: Checkout 
+      uses: actions/checkout@v4 
+
+    - name: Install kubeseal 
+      run: | 
+        wget https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-0.24.5-linux-amd64.tar.gz
+        tar -xvf kubeseal-0.24.5-linux-amd64.tar.gz
+        sudo install kubeseal /usr/local/bin/kubeseal
+
+    - name: Set up Kubeconfig
+      run: |
+        mkdir -p ~/.kube
+        echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
+        chmod 600 ~/.kube/config
+
+    - name: Apply Sealed Secrets 
+      run: |
+        kubectl apply -f k8s/sealed-secret.yaml
+         
 
   deploy:
     runs-on: ubuntu-latest
