--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,9 +100,18 @@ jobs:
          echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
          chmod 600 ~/.kube/config
 
+      - name: Wait for Controller to be Ready
+        run: |
+         kubectl rollout status deployment/sealed-secrets-controller -n kube-system --timeout=60s
+        env:
+          KUBECONFIG: ${{ secrets.KUBECONFIG }}
+
       - name: Apply Sealed Secrets 
         run: |
-         kubectl apply -f k8s/sealed-secret.yaml      
+         kubectl apply -f k8s/sealed-secret.yaml
+
+      - name: Deploy App to Kubernetes
+        run: kubectl apply -f k8s/manifests/deployment.yaml      
          
 
   deploy:
