--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,44 +74,43 @@ jobs:
           ignore-unfixed: true
 
   sealed-secrets: 
-    name: Apply Sealed Secrets 
-    runs-on: ubuntu-latest 
-    steps: 
-      - name: Checkout 
-        uses: actions/checkout@v4
+  name: Apply Sealed Secrets 
+  runs-on: ubuntu-latest 
+  steps: 
+    - name: Checkout 
+      uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
- 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+        
+    - name: Install kubeseal 
+      run: | 
+        wget https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-0.24.5-linux-amd64.tar.gz
+        tar -xvf kubeseal-0.24.5-linux-amd64.tar.gz
+        sudo install kubeseal /usr/local/bin/kubeseal
 
-      - name: Install kubeseal 
-        run: | 
-         wget https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-0.24.5-linux-amd64.tar.gz
-         tar -xvf kubeseal-0.24.5-linux-amd64.tar.gz
-         sudo install kubeseal /usr/local/bin/kubeseal
+    - name: Set up Kubeconfig
+      run: |
+        mkdir -p ~/.kube
+        echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
+        chmod 600 ~/.kube/config
 
-      - name: Set up Kubeconfig
-        run: |
-         mkdir -p ~/.kube
-         echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
-         chmod 600 ~/.kube/config
+    - name: Wait for Controller to be Ready
+      run: |
+        kubectl rollout status deployment/sealed-secrets-controller -n kube-system --timeout=60s
 
-      - name: Wait for Controller to be Ready
-        run: |
-         kubectl rollout status deployment/sealed-secrets-controller -n kube-system --timeout=60s
-        env:
-          KUBECONFIG: ${{ secrets.KUBECONFIG }}
+    - name: Apply Sealed Secrets 
+      run: |
+        kubectl apply -f k8s/sealed-secret.yaml
 
-      - name: Apply Sealed Secrets 
-        run: |
-         kubectl apply -f k8s/sealed-secret.yaml
-
-      - name: Deploy App to Kubernetes
-        run: kubectl apply -f k8s/manifests/deployment.yaml      
+    - name: Deploy App to Kubernetes
+      run: |
+        kubectl apply -f k8s/manifests/deployment.yaml
+      
          
 
   deploy:
