--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,6 +110,7 @@ jobs:
     - name: Deploy App to Kubernetes
       run: |
         kubectl apply -f k8s/manifests/deployment.yaml
+        kubectl apply -f k8s/manifests/service.yam
       
          
 
