--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,13 +110,13 @@ jobs:
     - name: Deploy App to Kubernetes
       run: |
         kubectl apply -f k8s/manifests/deployment.yaml
-        kubectl apply -f k8s/manifests/service.yam
+        kubectl apply -f k8s/manifests/service.yaml
       
          
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [terraform, tfsec, trivy]
+    needs: [terraform, tfsec, trivy, sealed-secrets]
 
     steps:
       - name: Checkout source code
