--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,9 +107,10 @@ jobs:
           sudo install kubeseal /usr/local/bin/kubeseal
 
       - name: Set up Kubeconfig
-        run: |
+        run: 
           mkdir -p ~/.kube
-          echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
+          echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig.yaml
+          echo "KUBECONFIG=$GITHUB_WORKSPACE/kubeconfig.yaml" >> $GITHUB_ENV
           chmod 600 ~/.kube/config
 
       - name: Wait for Controller to be Ready
