--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,8 +109,7 @@ jobs:
       - name: Set up Kubeconfig
         run: 
           mkdir -p ~/.kube
-          echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig.yaml
-          echo "KUBECONFIG=$GITHUB_WORKSPACE/kubeconfig.yaml" >> $GITHUB_ENV
+          echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
           chmod 600 ~/.kube/config
 
       - name: Wait for Controller to be Ready
