--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,11 +107,11 @@ jobs:
           sudo install kubeseal /usr/local/bin/kubeseal
 
       - name: Set up Kubeconfig
-        run: 
+        run: |
           mkdir -p ~/.kube
           echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
           chmod 600 ~/.kube/config
-
+          
       - name: Wait for Controller to be Ready
         run: kubectl rollout status deployment/sealed-secrets-controller -n kube-system --timeout=60s
 
