--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,7 +125,7 @@ jobs:
       
   deploy:
     runs-on: ubuntu-latest
-    needs: [terraform, tfsec, trivy, sealed-secrets]
+    needs: [terraform, tfsec, trivy]
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
