--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,8 +109,9 @@ jobs:
       - name: Set up Kubeconfig
         run: |
           mkdir -p ~/.kube
-          echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig.base64
+          echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
           chmod 600 ~/.kube/config
+
           
       - name: Wait for Controller to be Ready
         run: kubectl rollout status deployment/sealed-secrets-controller -n kube-system --timeout=60s
