--- a/k8s/manifests/service.yaml
+++ b/k8s/manifests/service.yaml
@@ -4,10 +4,11 @@ kind: Service
 metadata:
   name: vite-app-service
 spec:
+  type: NodePort
   selector:
     app: vite-app
   ports:
-    - protocol: TCP
-      port: 3000
+    - port: 3000
       targetPort: 3000
-  type: NodePort  
+      nodePort: 31000  # NodePort must be between 30000–32767
+ 
