--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,7 +117,8 @@ jobs:
           chmod 600 ~/.kube/config
 
       - name: Wait for Controller to be Ready
-        run: kubectl rollout status deployment/sealed-secrets-controller -n kube-system --timeout=120s
+        run:  kubectl rollout status deployment/sealed-secrets-controller -n sealed-secrets --timeout=120s
+
 
       - name: Apply Sealed Secrets
         run: kubectl apply -f k8s/sealed-secret.yaml
