--- a/k8s/sealed-secret.yaml
+++ b/k8s/sealed-secret.yaml
@@ -6,10 +6,5 @@ metadata:
   namespace: default
 spec:
   encryptedData:                       # these are must be encrypted using kubeseal
-    DBPASSWORD: AgBDNd8auFPxCvAmH4XTr8i2J1WvDYodEjj0DKXJDwvyHGBhLmumH3+X5nkL2gBmc1dR2BptxIN9S7cGrdmFAmR7M67m+O1TdqPne89bv9QOHL8bCKjSkA48W/SstnBiWiVR2YUCosBXIgEdNs/IboH6m2pdepN1ghKXbW26V6Hfmq44Jj3oL4/s5uFwWKX1I
-    DBUSERNAME: AgBjH/F4lEhkK6I4RwyNg4cUOGOHfnICb8JLbEVsFLwTOR6ceUH33Gx/PzLGnIbHVPXgaWA19d+KmQvzDvkJstuxHyg7RL7ubbfFgzJ3VihDh7qohDOCia0ng0Fs6nEeTNUKI2nAxXbuT+RSGIyObl77aa+8A/hTNhZ3vJxLIjQgqLb7ZGUiL3Ky9csc7wRzT
-  template:
-    metadata:
-      creationTimestamp: null
-      name: project-sealed
-      namespace: default
+    DBPASSWORD: REJVU0VSTkFNRQ==
+    DBUSERNAME: REJQQVNTV09SRA==
